examples/typechecking/mutual_recursion_rigid.an
// Mutually recursive definitions which type check when partially annotated despite
// `t != u` and neither ex1a nor ex1b being generalized when ex1b is called within ex1a.
// To do this we need to initialize them with partially generalized types:
//   ex1a: forall t. t -> b1 -> r1
//   ex1b: forall u. u -> b2 -> r2
// Such that b1, b2, r1, and r2 can still be further refined.
ex1a (a: t) b =
    ex1b a b
    0u32

ex1b (a: u) b =
    ex1a a b
    1u32


// Second example
trait T1 a = trait1: fn a -> Unit
trait T2 a = trait2: fn a -> Unit

ex2a (a: t) b {Copy t} =
    ex2b a b
    T1.trait1 a

ex2b (a: u) b {Copy u} =
    ex2c a b
    T2.trait2 a

ex2c (a: v) b {Copy v} =
    ex2a a b

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (ex1a: fn t _ -> U32) ((a: t)) (b: _) =
//     (ex1b: fn t _ -> U32) (a: t) (b: _)
//     0_U32
// 
// (ex1b: fn u _ -> U32) ((a: u)) (b: _) =
//     (ex1a: fn u _ -> U32) (a: u) (b: _)
//     1_U32
// 
// type T1 a =
//     trait1: fn a [Ptr Unit] -> Unit
// 
// type T2 a =
//     trait2: fn a [Ptr Unit] -> Unit
// 
// (ex2a: fn t _ {Copy t} -> Unit) ((a: t)) (b: _) {(_: Copy t)} =
//     (ex2b: fn t _ {Copy t} -> Unit) (a: t) (b: _) {(_: Copy t)}
//     (T1.trait1: fn t {T1 t} [Ptr Unit] -> Unit pure) (a: t) {(error)}
// 
// (ex2b: fn u _ {Copy u} -> Unit) ((a: u)) (b: _) {(_: Copy u)} =
//     (ex2c: fn u _ {Copy u} -> Unit) (a: u) (b: _) {(_: Copy u)}
//     (T2.trait2: fn u {T2 u} [Ptr Unit] -> Unit pure) (a: u) {(error)}
// 
// (ex2c: fn v _ {Copy v} -> Unit) ((a: v)) (b: _) {(_: Copy v)} =
//     (ex2a: fn v _ {Copy v} -> Unit) (a: v) (b: _) {(_: Copy v)}

// expected stderr:
// examples/typechecking/mutual_recursion_rigid.an:22:5
// 21 |     ex2b a b
// 22 |     T1.trait1 a	// error: No implicit found for type T1 t required by trait1
//    |     ^^^^^^^^^
// 
// examples/typechecking/mutual_recursion_rigid.an:26:5
// 25 |     ex2c a b
// 26 |     T2.trait2 a	// error: No implicit found for type T2 u required by trait2
//    |     ^^^^^^^^^
// 
// Found 2 errors and 0 warnings

